<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/randomPageTxt"
            android:textColor="@color/categoryTxtColor"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/randomTxt"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@color/randomPageColor"
            android:gravity="center"
            android:text="@string/randomTxt"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/foodImg"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:src="@drawable/logo"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:onClick="randomBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkPink"
            android:text="@string/randomBtnTxt" />
    </LinearLayout>

</LinearLayout>